updated file structure

--- a/v5.beta/Dockerfile
+++ b/v5.beta/Dockerfile
@@ -1,8 +1,8 @@
 FROM ruby:2.4-alpine3.6
 LABEL maintainer="christian.heimke@loumaris.com"
 
-RUN apk update && apk --update add 'postgresql=>9.6.0'
-RUN apk update && apk --update add --virtual build-dependencies build-base postgresql-dev linux-headers 
+RUN apk update && apk --update add --virtual build-dependencies build-base postgresql-dev linux-headers \
+    && apk add tar openssl 'postgresql=>9.6.0'
 
 RUN gem install backup -v '5.0.0.beta.2' \
     && gem install rufus-scheduler tzinfo-data
